分create模式和heavy模式